# insights-custom-connector-examples

./: README.md  pyproject.toml
sqlite/: README.md  elimity_insights_example_sqlite_connector.py
sqlite_basic/: README.md  data-model.json  elimity_insights_example_sqlite_connector.py  pyproject.toml
sqlite_streaming/: README.md  elimity_insights_example_sqlite_connector.py
